fix: fix NavigationControl wrap on small screens

--- a/src/components/NavigationControl/NavigationBreadcrumbs/NavigationBreadcrumbs.module.css
+++ b/src/components/NavigationControl/NavigationBreadcrumbs/NavigationBreadcrumbs.module.css
@@ -12,6 +12,8 @@
     height: rem(24px);
     border-radius: var(--mantine-radius-xl);
     transition: 150ms ease;
+    overflow: hidden;
+    text-wrap: nowrap;
 
     @mixin hover {
         background: darken(var(--mantine-color-default-hover), 0.05);
